examples/type_system/failing/35_pure_context_typed_pure_rejects_io.flx
// A3 matrix: typed pure function rejects direct IO builtin call.

fn pure_double(x: Int) -> Int {
    print(x)
    x * 2
}

fn main() -> Unit with IO {
    pure_double(2);
}
